# brontes

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile.neo4j  Dockerfile.pg  Dockerfile.server  README.md  docker-compose.beta.yml  docker-compose.staging.yml  docker-compose.yml  genenv.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: prod-deployment.yml  staing-deployment.yml  test.yml
brontes/: utils.py
brontes/application/api/: app.py
brontes/application/dtos/: device_dto.py  document_dto.py  point_dto.py
brontes/application/mqtt/: mqtt2timescale.py
brontes/application/services/: __init__.py  ai_assistant_service.py  bacnet_to_graph_service.py  cobie_to_graph_service.py  device_service.py  document_service.py  facility_service.py  point_service.py  portfolio_service.py  user_service.py
brontes/domain/model/: user.py
brontes/domain/models/: __init__.py  bacnet.py  brick_class.py  cobie.py  discipline.py  ifc_reference.py  user.py
brontes/domain/repository/: __init__.py  ai_repository.py  cobie_repository.py  device_repository.py  (+5 more)
brontes/infrastructure/: __init__.py  timescale.py
docker/: Dockerfile.mqtt2timescale  Dockerfile.server
docker/brontesAPI/: Dockerfile.api.local  Dockerfile.api.prod
docker/neo4j/: Dockerfile.neo4j  apoc.conf
docs/: README.md  mint.json
docs/getting-started/: introduction.mdx  setup.mdx
docs/reference/: glossary.mdx
examples/: chat.py  vector_store.py
openoperator/infrastructure/: __init__.py  knowledge_graph.py  mqtt_client.py  timescale.py
scripts/: chat.py  cobie_spreadsheet_validator.py
scripts/master_cobie/: convert2rdf.py  master_cobie.ttl
scripts/omniclass_tree/: create_tree.py  master_cobie.csv  omniclass_tree_products.csv  omniclass_tree_products.ttl  omniclass_tree_spaces.csv  omniclass_tree_spaces.ttl
tests/infrastructure/: test_knowledge_graph.py  test_timescale.py
tests/integration/: conftest.py  test_facility_repository.py  test_knowledge_graph.py  test_point_repository.py  test_portfolio_repository.py  test_timescale.py
tests/unit/: test_blob_store.py  test_cobie_processor.py  test_utils.py
(+36 files in other folders)
