[tool.poetry]
name = "openoperator"
version = "0.1.0"
description = ""
authors = ["demattosanthony <demattosanthony@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.12"
neo4j = "^5.19.0"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
psycopg = "^3.1.18"
pydantic = "^2.6.4"
tiktoken = "^0.6.0"
unstructured = "^0.13.2"
rdflib = "^7.0.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
azure-storage-blob = "^12.19.1"
pgvector = "^0.2.5"
python-multipart = "^0.0.9"
scikit-learn = "^1.4.2"
kneed = "^0.8.5"
pyarrow = "^15.0.2"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
pymupdf = "1.23.23"
paho-mqtt = "^2.0.0"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
langchain-core = "^0.1.41"
langchain-community = "^0.0.32"
langchain-postgres = "^0.0.1"
psycopg2 = "^2.9.9"
langchainhub = "^0.1.15"
pytest = "^8.1.1"
testcontainers = "^4.3.3"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "openoperator.application.api.app:start"
mqtt2timescale = "openoperator.application.mqtt.mqtt2timescale:start"